# legolas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.es.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  package.json
crates/legolas-cli/: Cargo.toml
crates/legolas-cli/src/: argv.rs  lib.rs  main.rs
crates/legolas-cli/src/reporters/: mod.rs  (+2 more)
crates/legolas-cli/tests/: README.md  baseline_contract.rs  budget_contract.rs  ci_contract.rs  cli_contract.rs  config_contract.rs  json_schema_contract.rs  optimize_action_ranking.rs  sarif_contract.rs  text_report_parity.rs
crates/legolas-core/: Cargo.toml
crates/legolas-core/src/: action_plan.rs  aliases.rs  analyze.rs  baseline.rs  boundaries.rs  budget.rs  confidence.rs  config.rs  error.rs  findings.rs  fix_hints.rs  impact.rs  import_scanner.rs  lib.rs  lockfiles.rs  models.rs  package_intelligence.rs  project_shape.rs  route_context.rs  workspace.rs  workspaces.rs
crates/legolas-core/tests/: action_plan.rs  alias_resolution.rs  analyze_parity.rs  artifact_models.rs  artifact_parsers.rs  artifact_source_merge.rs  baseline_diff.rs  boundary_analysis.rs  budget_evaluator.rs  confidence_labels.rs  config_loading.rs  duplicate_origin_trace.rs  finding_evidence.rs  finding_support.rs  fix_hints.rs  import_precision_icons.rs  import_precision_locales.rs  import_precision_subpaths.rs  import_scanner.rs  import_scanner_regressions.rs  intelligence_impact.rs  lockfiles.rs  monorepo_usage_splitting.rs  route_aware_lazy_loading.rs  seed_workspace_hooks.rs  workspace_project_shape.rs
(+152 files in other folders)
