[workspace]
members = ["crates/legolas-core", "crates/legolas-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/JeremyDev87/legolas"
homepage = "https://github.com/JeremyDev87/legolas#readme"

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
predicates = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
walkdir = "2"
